@@ -9,13 +9,13 @@ fi
 
 # Set Java options
 if [ "$JAVA_OPTIONS" = "" ] ; then
-	JAVA_OPTIONS="-Xms1G -Xmx1G -d64 -server -XX:+UseConcMarkSweepGC"
+	JAVA_OPTIONS="-Xms32M -Xmx32M"
 fi
 
 DIR=`dirname $0`
 
 # Launch the application
-$JAVA $JAVA_OPTIONS -cp $DIR/target/classes:$DIR/"target/dependency/*" com.franz.benchmarking.Neo4jLUBMLoader $*
+$JAVA $JAVA_OPTIONS -cp $DIR/target/classes:$DIR/"target/dependency/*" com.franz.benchmarking.JmxClient $*
 
 # Return the program's exit code
 exit $?
